; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_protection_keys.c_become_child.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/x86/extr_protection_keys.c_become_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"[%d] fork() ret: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @become_child() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @fork()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = icmp sge i64 %3, 0
  %5 = zext i1 %4 to i32
  %6 = call i32 @pkey_assert(i32 %5)
  %7 = call i32 (...) @getpid()
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @dprintf3(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %7, i64 %8)
  %10 = load i64, i64* %1, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %0
  ret void

13:                                               ; preds = %0
  %14 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i64 @fork(...) #1

declare dso_local i32 @pkey_assert(i32) #1

declare dso_local i32 @dprintf3(i8*, i32, i64) #1

declare dso_local i32 @getpid(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
